tests/fixtures/errors/assign_resultval_scalar.z
# E0300: a lossy numeric conversion yields a resultval; assigning it to a
# scalar target without unwrapping (.orPanic / .or / match) is a type error,
# caught here rather than as invalid C downstream.
main: function is {
    n: 5.u32
    big: 999.u64
    n = big.u32
}
